# Spatial_Simulator

./: #astFunction.cpp#  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.k40  README.md  README.txt  TAGS  astFunction.cpp  astFunction.h  boundaryFunction.cpp  boundaryFunction.h  calcFastReaction.cpp  calcFastReaction.h  calcPDE.cpp  calcPDE.h  cerealize.cpp  checkFunc.cpp  checkFunc.h  checkStability.cpp  example2.xml  freeFunction.cpp  freeFunction.h  initializeFunction.cpp  main.cpp  mystruct.h  niceNum.cpp  options.cpp  options.h  outputFunction.cpp  outputFunction.h  outputHDF.cpp  outputHDF.h  outputImage.cpp  outputImage.h  searchFunction.cpp  searchFunction.h  setInfoFunction.cpp  setInfoFunction.h  (+2 more)
cmake/: cmake_create_jar.cmake.in  cmake_uninstall.cmake.in  cpplint.cmake  find_libsbml.cmake
darwin/: libhdf5.100.dylib  libhdf5_cpp.100.dylib  libopencv_calib3d.3.1.dylib  libopencv_core.3.1.dylib  libopencv_features2d.3.1.dylib  libopencv_flann.3.1.dylib  libopencv_highgui.3.1.dylib  libopencv_imgcodecs.3.1.dylib  libopencv_imgproc.3.1.dylib  libopencv_ml.3.1.dylib  libopencv_objdetect.3.1.dylib  libopencv_photo.3.1.dylib  libopencv_shape.3.1.dylib  libopencv_stitching.3.1.dylib  libopencv_superres.3.1.dylib  libopencv_video.3.1.dylib  libopencv_videoio.3.1.dylib  libopencv_videostab.3.1.dylib
example/localization/2D/: infinite_diffusion_2D.xml  infinite_diffusion_2D_Cytosol.tif  infinite_diffusion_2D_species_localization.tif
example/localization/2D/result/: README.txt
example/localization/2D/result/CSV/: infinite_diffusion_2D_x104_y104_exact.csv  infinite_diffusion_2D_x104_y104_numerical.csv
example/localization/2D/result/HDF5/: infinite_diffusion_2D_x104_y104_numerical.h5
example/localization/3D/: infinite_diffusion_3D.xml  infinite_diffusion_3D_Cytosol.tif  infinite_diffusion_3D_species_localization.tif
example/localization/3D/result/: README.txt
example/localization/3D/result/CSV/: infinite_diffusion_3D_x43_y43_z41_exact.csv  infinite_diffusion_3D_x43_y43_z41_numerical.csv
example/uniform/: example2.xml
include/: CMakeLists.txt
include/spatialsim/: astFunction.h  boundaryFunction.h  calcPDE.h  checkFunc.h  mystruct.h  options.h  outputHDF.h  setInfoFunction.h
spatialsim/: astFunction.h  boundaryFunction.h  calcPDE.h  cerealize.h  checkFunc.h  checkStability.h  freeFunction.h  initializeFunction.h  mystruct.h  niceNum.h  options.h  outputFunction.h  outputHDF.h  outputImage.h  searchFunction.h  setInfoFunction.h  spatialsim.h  spatialsimulator.h
src/: CMakeLists.txt  boundaryFunction.cpp  calcPDE.cpp  checkFunc.cpp  freeFunction.cpp  initializeFunction.cpp  options.cpp  outputHDF.cpp  outputImage.cpp  searchFunction.cpp  setInfoFunction.cpp  spatialsimulator.cpp
util/: README.md  sim.cpp
